internal-vs-serviceb-weight.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: serviceb-internal
spec:
  hosts:
  - serviceb
  http:
  - route:
    - destination:
        host: serviceb
        port:
          number: 1323
        subset: v1
      weight: 90
      headers:
        request:
          add:
            "X-Service-Name" : "Service B"
    - destination:
        host: serviceb
        port:
          number: 1323
        subset: v2
      weight: 5
      headers:
        request:
          add:
            "X-Service-Name" : "Service B"
    - destination:
        host: serviceb
        port:
          number: 1323
        subset: v3
      weight: 5
      headers:
        request:
          add:
            "X-Service-Name" : "Service B"
